fix: removing dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import "./components/css/Header.css";
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -17,7 +17,7 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 *{
   box-sizing: content-box;
